<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:padding="16dp"
     android:orientation="vertical">

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:text="@string/game_name_label" />

    <EditText
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:hint="@string/game_name_hint"
         android:id="@+id/nameField" />

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:text="@string/game_path_label" />

    <EditText
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:hint="@string/game_path_hint"
         android:id="@+id/pathField" />

    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:orientation="horizontal">

        <Button
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:id="@+id/chooseFolderButton"
             android:text="@string/choose_folder" />

        <Button
             android:layout_height="wrap_content"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:id="@+id/chooseIsoButton"
             android:text="@string/choose_iso" />

    </LinearLayout>

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:text="@string/mouse_mode_label" />

    <Spinner
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:id="@+id/mouseModeSelectBox">

    </Spinner>

    <CheckBox
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:id="@+id/joystickCheckbox"
         android:text="@string/use_joystick" />

    <CheckBox
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:id="@+id/skipPoliceCheckbox"
         android:text="@string/skip_police_code" />

    <CheckBox
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:id="@+id/fullscreenCheckbox"
         android:text="@string/stretch_fullscreen" />

    <CheckBox
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:id="@+id/fpsCounterCheckbox"
         android:text="@string/show_fps" />

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:text="@string/patch_family_label" />

    <EditText
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:hint="@string/patch_family_hint"
         android:inputType="text"
         android:id="@+id/familyField" />

</LinearLayout>
