<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:padding="8dp">

    <TextView
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@id/buttonsLayout"
         app:layout_constraintHorizontal_chainStyle="spread_inside"
         android:id="@+id/gameNameTextView"
         tools:text="Nazwa Gry"
         android:textStyle="bold" />
    
    <TextView
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         app:layout_constraintStart_toStartOf="parent"
         android:textSize="14sp"
         android:textColor="?android:attr/textColorSecondary"
         app:layout_constraintEnd_toStartOf="@id/buttonsLayout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/gameNameTextView"
         android:id="@+id/detectedGameNameTextView"
         tools:text="Wykryta gra" />


    <TextView
         android:layout_height="wrap_content"
         android:layout_width="0dp"
         app:layout_constraintStart_toStartOf="parent"
         android:textSize="14sp"
         android:textColor="?android:attr/textColorSecondary"
         app:layout_constraintEnd_toStartOf="@id/buttonsLayout"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@id/detectedGameNameTextView"
         android:id="@+id/gameVersionTextView"
         tools:text="Wersja Gry" />

    <LinearLayout
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:id="@+id/buttonsLayout">

        <ImageButton
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:src="@drawable/baseline_arrow_forward_24"
                android:contentDescription="@string/run_game_desc"
                android:id="@+id/runButton" />

        <ImageButton
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:src="@drawable/baseline_edit_24"
             android:contentDescription="@string/edit_game_desc"
             android:id="@+id/editButton" />

        <ImageButton
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:src="@drawable/baseline_delete_24"
             android:contentDescription="@string/delete_game_desc"
             android:id="@+id/deleteButton" />

        <ImageButton
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:src="@drawable/baseline_extension_24"
             android:contentDescription="@string/patches_button_desc"
             android:id="@+id/patchesButton" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>